# HaskellerZ

./: .gitignore  Makefile  README  README.md  haskell_links.markdown  haskell_links.md  index.html
effective-haskell/: README.markdown  the-service-pattern.markdown
meetups/: 2014-10-30-Introduction_to_GHC_RTS  20170427_Demo.thy
meetups/2011 12 01 - Scrap your Boilerplate/: Example.hs
meetups/20110711-Coffe&Monads/: MonadTransformers.hs
meetups/20111201-Scrap_your_Boilerplate/: notes.txt
meetups/2012 01 19 - The bytestring library/: .gitignore  Makefile  bytestring-talk.cabal  bytestring-talk.lhs  bytestring-talk.md  bytestring.md  handout.html  slides.html
meetups/2012 01 19 - The bytestring library/papers/: eval-apply.ps
meetups/20120119-The_bytestring_library/: LICENSE  Makefile
meetups/20120301-The_STG_machine/: .gitignore  Makefile  StgSample.hs
meetups/20121101-Software_Transactional_Memory/: README  bank.hs
meetups/2013 01 24 - Advanced API Design/: example.hs  hoopl-example.cabal
meetups/2013-06-27-Stream_Fusion/: Makefile  examples.hs
meetups/2013-09-26-Hindley_Milner_type_inference/: Main.hs  hm_inference.hs  minihaskell.hs
meetups/20130124-Advanced_API_Design/: README  example.hs  hoopl-example.cabal
meetups/20130124-Advanced_API_Design/hoopl/: example.hs
meetups/20130321-Intro_GHC_RTS/: .gitignore  Average.hs  Enum.hs  List.hs  Makefile  SumN.hs  intro_ghc_rts-talk.md
meetups/20130321-Intro_GHC_RTS/finished_talk/: handout.html  slides.html
meetups/20130425-HFlags_and_Template_Haskell/: Makefile  cmdthelineex.hs  getoptex.hs  hflags.md
meetups/20130425-HFlags_and_Template_Haskell/examples/: Library.hs  User.hs  (+1 more)
meetups/20130829-FPAfternoon_Ceh/: README
meetups/20140327-Pipes/: Makefile  pipes.md
meetups/20140423-GHC_Hacking/: Makefile  ghchack.md
meetups/20140529-make-you-a-monad/: Makefile  make-you-a-monad.md
meetups/20140607-ZuriHac_Profiling/: README  main.hs  main.prof
meetups/20140731-Intro-Multi-Core-And-GPU/: Introduction.html  Introduction.lhs  Makefile
meetups/2015-02-26-Writing_your_first_real_world_Haskell_application/: .gitignore  Makefile  real_world_haskell_intro.markdown
meetups/2015-03-26-Writing_Games_in_Haskell/: Makefile  games.md  lens-recap.hs
meetups/2015-03-26-Writing_Games_in_Haskell/demo-game/: .gitignore  demo-game.cabal  ghci.here
meetups/2015-03-26-Writing_Games_in_Haskell/demo-game/src/: Keys.hs  Main.hs  Moving.hs  Player.hs  Target.hs
meetups/2015-04-30-Netwire_and_Arrows/: Makefile  applicative.fig  arrow.fig
meetups/2015-04-30-Netwire_and_Arrows/asteroids-sounds/: asteroids-sounds.cabal  sounds.hs
meetups/2015-04-30-Netwire_and_Arrows/gloss-netwire/: .gitignore  LICENSE  gloss-netwire.cabal
meetups/2015-04-30-Netwire_and_Arrows/gloss-netwire/demo/: Demo1.hs  Demo2.hs  Demo3.hs  Demo4.hs
meetups/2015-04-30-Netwire_and_Arrows/gloss-netwire/src/Graphics/Gloss/Interface/FRP/: Netwire.hs
meetups/20150529-ZuriHac2015_Jannis_Limperg-Monads_by_Example/: structure
meetups/20150529-ZuriHac2015_Oliver_Charles-Web_Programming/: Main.hs  shell.nix  talk.org
meetups/20150530-Template_Haskell/: compile.el  slides.html  slides.org
meetups/20150530-ZuriHac2015_Gergely_Risko-Template_Haskell/: Makefile  slides.html  slides.org
meetups/20150531-ZuriHac2015_Johan_Tibell-Performance/: Makefile  show.css  slides.html  slides.md  slidy.js
meetups/20151029-Introduction-to-Servant/: 01-Hello.hs  02-Endpoints.hs  03-Json.hs  04-Accept.hs  05-Headers.hs  06-State.hs  07-Post.hs  notes.md
meetups/2015_01-29-Property_Based_Testing/: LazySmallCheck.hs  SmallCheck.hs  SmartCheck.hs  TestingFunctions.hs  Tutorial.hs  slides.html
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/: Makefile  handout.html  haskell_and_fp_in_industry.md  slides.html
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/: elevence-base.cabal
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src-tests/: main.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Bound/: Extended.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Control/Monad/Trans/Either/: Extended.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Data/: Git.hs  GrowingIntMap.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Data/List/Extended/: Tests.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Data/Monoid/: Extended.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Data/Relation/Binary/Ordered/: Tests.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Data/Set/: Extended.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Elevence/: Prelude.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Orphans/: Lib_hashable.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Test/Tasty/QuickCheck/: Extended.hs
meetups/2016-12-01-Haskell_guest_lecture_at_HSR/code-by-elevence/libs/hs/elevence-base/src/Text/PrettyPrint/Annotated/: Extended.hs
meetups/20160428-A_Tour_of_GHC_8.0/: talk-standalone.html  talk.html
meetups/20160825-Comparing_Haskell_-_Scala/: README.md
meetups/20160825-Comparing_Haskell_and_Scala/: README.md
meetups/20160929-Refinement_ types_for_Haskell/: README.md
meetups/2018-01-25-bring-your-own-problem/: README.md
meetups/2018-09-16-nyc-tdd-unification/: README.md
meetups/20180531-GHC-Newcomers-Guide/: slides.md
meetups/20180726-A_Tour_of_Dependent_Types_with_Idris/: Adder.idr  StackLang.idr
zurihac2015/talks/: Edward_Kmett-Discrimination_is_Wrong_Improving_Productivity  Jannis_Limperg-Monads_by_Example  Johan_Tibell-Performance  Mathieu_Boespflug-Distributed_Programming  Oliver_Charles-Web_Programming
(+240 files in other folders)
