name:                hoopl-example
version:             0.1.0.0
synopsis:            hoopl example use casae
homepage:            https://github.com/meiersi/HaskellerZ
license:             BSD3
author:              Alexander Bernauer
maintainer:          acopton@google.com
build-type:          Simple
cabal-version:       >=1.10

executable example
  main-is:          example.hs
  default-language: Haskell2010
  ghc-options:      -Wall 
  build-depends:
    base      >= 4 && < 5,
    hoopl     == 3.8.7.4
