name:                demo-game
version:             0.1.0.0
-- synopsis:
-- description:
license:             Apache-2.0
license-file:        LICENSE
author:              Mihaly Barasz
maintainer:          klao@nilcons.com
-- copyright:
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable demo-game
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:
    base >=4.7 && <4.8,
    gloss
